--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Webstudio</title>
+    <title>Web studio</title>
   </head>
-  <body></body>
+  <body>
+    <!--Header-->
+    <header>
+      <nav></nav>
+    </header>
+    <main>
+      <!--Hero section-->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+      </section>
+      <!--We doing section-->
+      <section></section>
+      <!--Team section-->
+      <section></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
