--- a/index.html
+++ b/index.html
@@ -8,17 +8,98 @@
   <body>
     <!--Header-->
     <header>
-      <nav></nav>
+      <nav>
+        <a href=""><span>WEB</span>STUDIO</a>
+        <ul>
+          <li>
+            <a href="">Studio</a>
+          </li>
+          <li>
+            <a href="">Portfolio</a>
+          </li>
+          <li>
+            <a href="">Contacts</a>
+          </li>
+        </ul>
+        <ul>
+          <li>info@devstudio.com</li>
+          <li>+11 (000) 111-11-11</li>
+        </ul>
+      </nav>
     </header>
     <main>
       <!--Hero section-->
       <section>
         <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
-      <!--We doing section-->
+      <!--Mission section-->
+
       <section></section>
+      <!--Doing section-->
+      <ul>
+        <li>
+          <h3>Strategy</h3>
+          <p>
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </li>
+        <li>
+          <h3>Punctuality</h3>
+          <p>
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+        <li>
+          <h3>Diligence</h3>
+          <p>
+            Research and confirm brands that present the strongest digital
+            growth opportunities and minimize risk.
+          </p>
+        </li>
+        <li>
+          <h3>Technologies</h3>
+          <p>
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
+      </ul>
+      <section>
+        <h2>What Are We Doing</h2>
+        <ul>
+          <li>
+            <img
+              src=".images/Img_1.jpg"
+              alt="Image_1"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src=".images/Img_2.jpg"
+              alt="Image_2"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src=".images/Img_3.jpg"
+              alt="Image_3"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
       <!--Team section-->
-      <section></section>
+      <section>
+        <h2>Our Team</h2>
+      </section>
     </main>
     <footer></footer>
   </body>
