--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ul>
           <li>
             <img
-              src=".images/Img_1.jpg"
+              src="./images/img_1.jpg"
               alt="Image_1"
               width="360"
               height="300"
@@ -80,7 +80,7 @@
           </li>
           <li>
             <img
-              src=".images/Img_2.jpg"
+              src="./images/img_2.jpg"
               alt="Image_2"
               width="360"
               height="300"
@@ -88,7 +88,7 @@
           </li>
           <li>
             <img
-              src=".images/Img_3.jpg"
+              src="./images/img_3.jpg"
               alt="Image_3"
               width="360"
               height="300"
@@ -99,6 +99,48 @@
       <!--Team section-->
       <section>
         <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/team/img-4.jpg"
+              alt="Image_4"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/img-5.jpg"
+              alt="Image-4"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/img-6.jpg"
+              alt="Image_06"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/img-7.jpg"
+              alt="Image_07"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer></footer>
