--- a/index.html
+++ b/index.html
@@ -29,67 +29,67 @@
     </header>
     <main>
       <!--Hero section-->
-      <section>
+      <section id="hero">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-      <!--Mission section-->
-
-      <section></section>
-      <!--Doing section-->
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-      <section>
+      <!--Overview section-->
+      <section id="overview">
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!--doing section-->
+      <section id="doing">
         <h2>What Are We Doing</h2>
         <ul>
           <li>
             <img
-              src="./images/img_1.jpg"
-              alt="Image_1"
+              src="./images/img-1.jpg"
+              alt="img-1"
               width="360"
               height="300"
             />
           </li>
           <li>
             <img
-              src="./images/img_2.jpg"
-              alt="Image_2"
+              src="./images/img-2.jpg"
+              alt="img-2"
               width="360"
               height="300"
             />
           </li>
           <li>
             <img
-              src="./images/img_3.jpg"
-              alt="Image_3"
+              src="./images/img-3.jpg"
+              alt="img-3"
               width="360"
               height="300"
             />
@@ -97,13 +97,13 @@
         </ul>
       </section>
       <!--Team section-->
-      <section>
+      <section id="team">
         <h2>Our Team</h2>
         <ul>
           <li>
             <img
               src="./images/team/img-4.jpg"
-              alt="Image_4"
+              alt="img-4"
               width="264"
               height="260"
             />
@@ -113,7 +113,7 @@
           <li>
             <img
               src="./images/team/img-5.jpg"
-              alt="Image-4"
+              alt="img-4"
               width="264"
               height="260"
             />
@@ -123,7 +123,7 @@
           <li>
             <img
               src="./images/team/img-6.jpg"
-              alt="Image_06"
+              alt="img-6"
               width="264"
               height="260"
             />
@@ -133,7 +133,7 @@
           <li>
             <img
               src="./images/team/img-7.jpg"
-              alt="Image_07"
+              alt="img-7"
               width="264"
               height="260"
             />
@@ -143,6 +143,13 @@
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <h3></h3>
+      <p>
+        <a href=""><span>WEB</span>STUDIO</a>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
