--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <ul>
           <li>
             <img
-              src="./images/img-1.jpg"
+              src="./images/main/img-1.jpg"
               alt="img-1"
               width="360"
               height="300"
@@ -80,7 +80,7 @@
           </li>
           <li>
             <img
-              src="./images/img-2.jpg"
+              src="./images/main/img-2.jpg"
               alt="img-2"
               width="360"
               height="300"
@@ -88,7 +88,7 @@
           </li>
           <li>
             <img
-              src="./images/img-3.jpg"
+              src="./images/main/img-3.jpg"
               alt="img-3"
               width="360"
               height="300"
@@ -144,7 +144,6 @@
       </section>
     </main>
     <footer>
-      <h3></h3>
       <a href=""><span>WEB</span>STUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital
