--- a/index.html
+++ b/index.html
@@ -144,11 +144,15 @@
       </section>
     </main>
     <footer>
-      <a href=""><span>WEB</span>STUDIO</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <ul>
+        <li>
+          <a href=""><span>WEB</span>STUDIO</a>
+          <p>
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
