--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <li>
             <img
               src="./images/main/img-1.jpg"
-              alt="img-1"
+              alt="computer-img-1"
               width="360"
               height="300"
             />
@@ -81,7 +81,7 @@
           <li>
             <img
               src="./images/main/img-2.jpg"
-              alt="img-2"
+              alt="mobile-application-img-2"
               width="360"
               height="300"
             />
@@ -89,7 +89,7 @@
           <li>
             <img
               src="./images/main/img-3.jpg"
-              alt="img-3"
+              alt="mobile-phone-img-3"
               width="360"
               height="300"
             />
@@ -103,7 +103,7 @@
           <li>
             <img
               src="./images/team/img-4.jpg"
-              alt="img-4"
+              alt="product-designer-img-4"
               width="264"
               height="260"
             />
@@ -113,7 +113,7 @@
           <li>
             <img
               src="./images/team/img-5.jpg"
-              alt="img-4"
+              alt="frontend-developer-img-4"
               width="264"
               height="260"
             />
@@ -123,7 +123,7 @@
           <li>
             <img
               src="./images/team/img-6.jpg"
-              alt="img-6"
+              alt="marketing-img-6"
               width="264"
               height="260"
             />
@@ -133,7 +133,7 @@
           <li>
             <img
               src="./images/team/img-7.jpg"
-              alt="img-7"
+              alt="ui-designer-img-7"
               width="264"
               height="260"
             />
