--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Header-->
     <header>
       <nav>
-        <a href=""><span>WEB</span>STUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -21,11 +21,11 @@
             <a href="">Contacts</a>
           </li>
         </ul>
-        <ul>
-          <li>info@devstudio.com</li>
-          <li>+11 (000) 111-11-11</li>
-        </ul>
       </nav>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      </address>
     </header>
     <main>
       <!--Hero section-->
@@ -144,15 +144,11 @@
       </section>
     </main>
     <footer>
-      <ul>
-        <li>
-          <a href=""><span>WEB</span>STUDIO</a>
-          <p>
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </li>
-      </ul>
+      <a href="./index.html">WEBSTUDIO</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
