--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Header-->
     <header>
       <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebSudio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -23,8 +23,14 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
       </address>
     </header>
     <main>
