--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Header-->
     <header>
       <nav>
-        <a href="./index.html">WebSudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li>
             <a href="">Studio</a>
@@ -74,7 +74,7 @@
       </section>
       <!--doing section-->
       <section id="doing">
-        <h2>What Are We Doing</h2>
+        <h2>What are we doing</h2>
         <ul>
           <li>
             <img
@@ -150,7 +150,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
