--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </section>
       <!--Overview section-->
       <section id="overview">
-        <h2>Lorem ipsum</h2>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
